bug 299644: Array.prototype.concat() plugs holes in the existing array. r+a=brendan